--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -186,6 +186,9 @@
 	<string name="mail_pref_display_plain_text_when_html">显示纯文本</string>
 	<string name="mail_pref_display_plain_text_when_html_sumOn">优先显示纯文本，延迟加载HTML部分(图片等等)</string>
 	<string name="mail_pref_display_plain_text_when_html_sumOff">优先自动显示HTML部分，不显示纯文本信息</string>
+	<string name="mail_pref_mail_force_delete_when_slide">删除邮件时不提示</string>
+	<string name="mail_pref_mail_force_delete_when_slide_sumOn">直接删除邮件，不弹出提示框</string>
+	<string name="mail_pref_mail_force_delete_when_slide_sumOff">询问是否删除邮件</string>
 	<string name="mail_pref_prompt_category">提醒</string>
 	<string name="mail_pref_vibrate">震动</string>
 	<string name="mail_pref_vibrate_sum">新邮件到达时（发送失败时）震动</string>
