--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -183,6 +183,9 @@
 	<string name="mail_pref_del_remote_mail_sum">Delete remote server mail simultaneously when delete local one</string>
 	<string name="mail_pref_send_to_copy">Send To Copy</string>
 	<string name="mail_pref_send_to_copy_sum">Copy a mail to sent folder when sending(NOT supports POP3)</string>
+	<string name="mail_pref_mark_read">Mark Read Remote</string>
+	<string name="mail_pref_mark_read_sumOn">Mark mail read in remote post server when open mail</string>
+	<string name="mail_pref_mark_read_sumOff">Do not mark mail read in remote post server when open mail</string>
 	<string name="mail_pref_display_plain_text_when_html">Display Plain Text</string>
 	<string name="mail_pref_display_plain_text_when_html_sumOn">Priority display plain text, load HTML part(image) later</string>
 	<string name="mail_pref_display_plain_text_when_html_sumOff">Auto display HTML part priority, does not display plain text</string>
