--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="dlg_info_copy">Copy To Clipboard</string>
     <string name="dlg_info_yesno_confirm">Yes</string>
     <string name="dlg_info_yesno_cancel">No</string>
+    <string name="dlg_wait_text">Please wait a moment...</string>
         
     <!-- mail list view -->
     <string name="no_mail">no mail, please wait refresh...</string>
@@ -176,6 +177,7 @@
     <string name="mail_compose_remove_attach_prompt">Are you sure remove this attchment?</string>
     <string name="mail_compose_cant_send_att">Has another mail with attachment is sending, please wait.</string>
     <string name="mail_compose_cant_add_att">This files has been added!</string>
+    <string name="mail_compose_add_att_failed">Add attachment failed, please via another way.</string>
     
     
     <!-- mail preference activity -->
